# cc-philo-talk

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
discussions/: 01-ai-distribution.md  02-radical-individuality.md  03-does-ai-have-a-soul.md  article-sspai.md  article-substack.md
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  storage.rs
src-tauri/src/commands/: ai.rs  dialogue.rs  me.rs  mod.rs  philosopher.rs
src/components/layout/: AppLayout.vue  AppSidebar.vue
src/composables/: useTauriCommand.ts
src/modules/dialogue/components/: DialogueList.vue  MessageBubble.vue  MessageInput.vue
src/modules/dialogue/views/: DialogueView.vue
src/modules/me/components/: InsightCard.vue  InsightEditor.vue  ManifestoEditor.vue
src/modules/me/views/: MeView.vue
src/modules/philosophers/components/: PhilosopherCard.vue  PhilosopherEditor.vue
src/modules/philosophers/data/: presets.ts
src/modules/philosophers/views/: PhilosophersView.vue
src/router/: index.ts
src/stores/: dialogue.ts  me.ts  philosophers.ts
src/styles/: main.css
